<resources>
    <string name="app_name">WeatherApp</string>

    <string name="no_internet_connection_error">You have no internet connection</string>
    <string name="server_error">Error</string>
    <string name="unAuthentication">un auth</string>
    <string name="not_found">Not Found</string>
    <string name="bad_request">Bad Request</string>
    <string name="something_wrong">some thing wrong</string>
    <string name="cities">Cities</string>
    <string name="add_city">Add City</string>
    <string name="city_title">%s,%s,%s</string>
    <string name="hint_search">Search for cities</string>
    <string name="weather_status">%s,%s ℃</string>
    <string name="temp_c">%s ℃</string>
    <string name="hum_percentage">%s %</string>
    <string name="wind_km_h">%s km/h</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Windspeed</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

</resources>