<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.weather_details.WeatherDetailsFragment">

    <include layout="@layout/header_view" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />


    <View
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="-24dp"
        android:background="@drawable/condation_bg"
        app:layout_constraintBottom_toBottomOf="@+id/wind_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location_tv" />

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/header_vw"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/header_vw"
        tools:text="London, UK" />


    <ImageView
        android:id="@+id/status_img"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/location_tv" />

    <TextView
        android:id="@+id/des_tv"
        style="@style/condition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/description"
        app:layout_constraintEnd_toStartOf="@+id/des_tv_val"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/status_img" />

    <TextView
        android:id="@+id/des_tv_val"
        style="@style/condition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/des_tv"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/des_tv"
        app:layout_constraintTop_toTopOf="@+id/des_tv"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tem_tv"
        style="@style/condition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        app:layout_constraintBottom_toBottomOf="@+id/temp_val"
        app:layout_constraintEnd_toStartOf="@+id/temp_val"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/des_tv"
        app:layout_constraintTop_toTopOf="@+id/temp_val" />

    <TextView
        android:id="@+id/temp_val"
        style="@style/condition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/des_tv_val"
        app:layout_constraintStart_toEndOf="@+id/tem_tv"
        app:layout_constraintTop_toBottomOf="@+id/des_tv_val"
        tools:text="TextView" />

    <TextView
        android:id="@+id/hum_tv"
        style="@style/condition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="@+id/hum_val"
        app:layout_constraintEnd_toStartOf="@+id/hum_val"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/des_tv"
        app:layout_constraintTop_toTopOf="@+id/hum_val" />

    <TextView
        android:id="@+id/hum_val"
        style="@style/condition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/des_tv_val"
        app:layout_constraintStart_toEndOf="@+id/hum_tv"
        app:layout_constraintTop_toBottomOf="@+id/temp_val"
        tools:text="TextView" />

    <TextView
        android:id="@+id/wind_tv"
        style="@style/condition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windspeed"
        app:layout_constraintBottom_toBottomOf="@+id/wind_val"
        app:layout_constraintEnd_toStartOf="@+id/wind_val"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/des_tv"
        app:layout_constraintTop_toTopOf="@+id/wind_val"
      />

    <TextView
        android:id="@+id/wind_val"
        style="@style/condition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="@+id/des_tv_val"
        app:layout_constraintStart_toEndOf="@+id/wind_tv"
        app:layout_constraintTop_toBottomOf="@+id/hum_val"
       />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:constraint_referenced_ids="bg,location_tv,status_img,des_tv,des_tv_val,tem_tv,temp_val,hum_tv,hum_val,wind_tv,wind_val" />


</androidx.constraintlayout.widget.ConstraintLayout>